hettyversion/static/style.css
html {
	height: 100%;
}

body {
	min-height: 100%;
}

.btn {
	margin-bottom: 10px;
}

.nav>li {
	display: inline-block;
}

#header {
    border-bottom: 1px solid #bbb;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 1;
    background: white;
}

#content {
	padding-top: 40px;
}

#footer {
    border-top: 1px solid #bbb;
    padding: 10px;
    background: #404040;
    color: white;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
}

.home {
    background-image: url(/hettyversion/static/img/psychedelic-girl.jpg);
    background-size: cover;
}

.jumbotron-home {
    text-align: center;
    color: white;
    text-shadow: 0 0 5px rgba(0,0,0,0.5), 2px 2px 2px rgba(0,0,0,0.75);
    background: transparent;
}

.vote-form>div {
    text-align: center;
}

.vote-button {
  background: #4abcd9;
  background-image: -webkit-linear-gradient(top, #4abcd9, #2980b9);
  background-image: -moz-linear-gradient(top, #4abcd9, #2980b9);
  background-image: -ms-linear-gradient(top, #4abcd9, #2980b9);
  background-image: -o-linear-gradient(top, #4abcd9, #2980b9);
  background-image: linear-gradient(to bottom, #4abcd9, #2980b9);
  -webkit-border-radius: 3;
  -moz-border-radius: 3;
  border-radius: 3px;
  font-family: Arial;
  color: #ffffff;
  font-size: 20px;
  padding: 10px 20px 10px 20px;
  text-decoration: none;
}

.vote-button:hover {
  background: #3cb0fd;
  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
  text-decoration: none;
}

a.lt {
    transition: color 0.25s;
    font-size: 20px;
    width: 20px;
    display: inline-block;
    position: relative;
    z-index: 1;
}

a.lt-false {
    color: #bbb
}

a.lt-true {
    color: limegreen;
}

a.lt:hover:after {
    position: absolute;
    color: #404040;
    bottom: 100%;
    background: #eee;
    border: 1px solid #404040;
    border-radius: 2px;
    padding: 4px 2px;
    font-size: 13px;
    display: block;
    width: 120px;
    text-align: center;
    line-height: 100%;
    box-shadow: 2px 2px 2px rgba(0,0,0,0.5)
}

.comment-body {
    white-space: pre;
}

a.lt-false:hover:after {
    content: 'Mark this version listened.';
}

a.lt-true:hover:after {
    content: 'Mark this version unlistened.';
}

a.list-group-item, button.list-group-item {
    width: calc(100% - 20px);
    display: inline-block;
}

.vote-comment {
    width: 100%;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
    height: 200px;
}

